Update css to stop overflow

--- a/app/assets/stylesheets/01_index.scss
+++ b/app/assets/stylesheets/01_index.scss
@@ -1,6 +1,6 @@
 #root {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 
 .auth-errors {
