--- a/app/assets/stylesheets/10_restaurant.scss
+++ b/app/assets/stylesheets/10_restaurant.scss
@@ -6,8 +6,8 @@
 #restaurant-banner {
   min-height: 120px;
   height: 13vh;
-  max-width: 100vw;
-  width: 100vw;
+  max-width: 100%;
+  width: 100%;
   object-fit: cover;
   background-color: brown;
 }
@@ -27,7 +27,7 @@
 
 #menu-items-wrapper {
   position: absolute;
-  height: 100%;
+  height: auto;
   width: 70%;
   right: 20px;
 }
